--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.minelsaygisever</groupId>
         <artifactId>money-transfer-orchestrator</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <artifactId>account-service</artifactId>
