--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>com.minelsaygisever</groupId>
             <artifactId>common-library</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
