refactor(account): enhance entity safety, adopt DTO pattern, externalize config, and improve error handling

--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -21,3 +21,8 @@ logging:
   level:
     org.springframework.r2dbc: DEBUG
     io.r2dbc.postgresql: INFO
+
+banking:
+  account:
+    default-daily-limit: 5000.00
+    default-currency: TRY
