--- a/account-service/src/test/resources/application.yml
+++ b/account-service/src/test/resources/application.yml
@@ -7,3 +7,7 @@ spring:
 logging:
   level:
     org.springframework.r2dbc: DEBUG
+banking:
+  account:
+    default-daily-limit: 5000.00
+    default-currency: TRY
