--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -5,6 +5,30 @@ spring:
   application:
     name: account-service
 
+  cloud:
+    stream:
+      kafka:
+        binder:
+          brokers: ${SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS:localhost:9092}
+          auto-create-topics: true
+
+      function:
+        definition: processTransferInit
+
+      bindings:
+        processTransferInit-in-0:
+          destination: transfer-events
+          group: account-service-group
+          consumer:
+            max-attempts: 3
+            back-off-initial-interval: 1000
+        account-out-0:
+          destination: account-events
+          producer:
+            partition-key-expression: headers['partitionKey']
+        account-dlq-0:
+          destination: account-events-dlq
+
   r2dbc:
     url: r2dbc:postgresql://localhost:5432/banking_core
     username: admin
@@ -26,3 +50,12 @@ banking:
   account:
     default-daily-limit: 5000.00
     default-currency: TRY
+    outbox:
+      binding-name: account-out-0
+      dlq-binding-name: account-dlq-0
+      batch-size: 20
+      polling-interval: 1000ms
+    backoff:
+      initial-delay: 1m
+      max-delay: 60m
+      multiplier: 2.0
