--- a/account-service/src/test/resources/application.yml
+++ b/account-service/src/test/resources/application.yml
@@ -4,6 +4,10 @@ spring:
       mode: never
   application:
     name: account-service-test
+  cloud:
+    function:
+      definition:  transferInitiated;transferDepositRequested;transferRefundRequested
+
 logging:
   level:
     org.springframework.r2dbc: DEBUG
@@ -11,3 +15,5 @@ logging:
 account:
   default-daily-limit: 5000.00
   default-currency: TRY
+  outbox:
+    polling-interval: 3600000
