--- a/transfer-service/src/test/resources/application.yml
+++ b/transfer-service/src/test/resources/application.yml
@@ -14,7 +14,31 @@ spring:
     enabled: false
 
   cloud:
+    function:
+      definition: onAccountEvent
+
     stream:
+      kafka:
+        binder:
+          auto-create-topics: true
+          configuration:
+            auto.offset.reset: earliest
+
       bindings:
-        transfer-out-0:
-          destination: transfer-topic-test
+        onAccountEvent-in-0:
+          destination: account-events
+          group: transfer-saga-test-group
+
+        transfer-debit-out-0:
+          destination: transfer-debit-events
+
+        transfer-credit-out-0:
+          destination: transfer-credit-events
+
+        transfer-refund-out-0:
+          destination: transfer-refund-events
+
+logging:
+  level:
+    org.springframework.cloud.stream: DEBUG
+    com.minelsaygisever.transfer: DEBUG
