--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -66,11 +66,18 @@ logging:
 account:
   default-daily-limit: 5000.00
   default-currency: TRY
+
   outbox:
     binding-name: account-out-0
     dlq-binding-name: account-dlq-0
     batch-size: 20
     polling-interval: 1000ms
+
+  cleanup:
+    cron: "0 */30 * * * *"
+    retention-period: 7d
+    batch-size: 1000
+
   backoff:
     initial-delay: 1m
     max-delay: 60m
