--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
   application:
     name: account-service
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://keycloak:8080/realms/banking-realm/protocol/openid-connect/certs
+
   cloud:
     function:
       definition: transferInitiated;transferDepositRequested;transferRefundRequested;onAccountDlqEvent
