--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.minelsaygisever</groupId>
     <artifactId>money-transfer-orchestrator</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.0</version>
 
     <packaging>pom</packaging>
 
@@ -24,6 +24,7 @@
         <module>common-library</module>
         <module>account-service</module>
         <module>transfer-service</module>
+        <module>gateway-service</module>
     </modules>
 
     <properties>
